--- a/ProyectoBibliotecaDSW2-war/web/CategoriaListaV2.xhtml
+++ b/ProyectoBibliotecaDSW2-war/web/CategoriaListaV2.xhtml
@@ -1,19 +1,22 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        <h1>Lista de Categoria</h1>
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
+
+    <body>
+
+        <ui:composition template="./TemplatePrincipal.xhtml">
+
+            <ui:define name="content">
+                <h1>Lista de Categoria</h1>
         <f:view>
 
 
             <h:form>
-                <h:commandButton action="CategoriaCrearEditar" value="Nuevo" actionListener="#{categoriaBean.limpiarNuevo}"/>
-                  <h:commandButton action="MenuPrincipalV2" value="Regresar"/>
+                <h:commandButton action="CategoriaCrearEditarV2" value="Nuevo" actionListener="#{categoriaBean.limpiarNuevo}"/>
+                <h:commandButton action="MenuPrincipalV2" value="Regresar"/>
                 <h1><h:outputText value="List"/></h1>
                 <h:dataTable value="#{categoriaBean.lista}" var="item">
                     <h:column>
@@ -35,12 +38,12 @@
                         <h:outputText value="#{item.descripcion}"/>
                     </h:column>
                     <h:column>
-                        <h:commandButton action="CategoriaCrearEditar" value="Editar" actionListener="#{categoriaBean.prepararEditar}">
+                        <h:commandButton action="CategoriaCrearEditarV2" value="Editar" actionListener="#{categoriaBean.prepararEditar}">
                             <f:setPropertyActionListener target="#{categoriaBean.categoria}" value="#{item}"/>
                         </h:commandButton>
                     </h:column>
                     <h:column>
-                        <h:commandButton action="CategoriaConfirmar" value="Eliminar" actionListener="#{categoriaBean.prepararEliminar}">
+                        <h:commandButton action="CategoriaConfirmarV2" value="Eliminar" actionListener="#{categoriaBean.prepararEliminar}">
                             <f:setPropertyActionListener target="#{categoriaBean.categoria}" value="#{item}"/>
                         </h:commandButton>
                     </h:column>
@@ -48,6 +51,9 @@
             </h:form>
         </f:view>
 
-    </h:body>
-</html>
+            </ui:define>
 
+        </ui:composition>
+
+    </body>
+</html>
