--- a/ProyectoBibliotecaDSW2-war/web/EmpleadoCrearEditarV2.xhtml
+++ b/ProyectoBibliotecaDSW2-war/web/EmpleadoCrearEditarV2.xhtml
@@ -1,13 +1,16 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        <f:view>
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
+
+    <body>
+
+        <ui:composition template="./TemplatePrincipal.xhtml">
+
+            <ui:define name="content">
+                 <f:view>
 
 
             <h:form>
@@ -42,12 +45,15 @@
                         
                         <f:selectItems value="#{empleadoBean.listaPuesto}" var="item" itemLabel="#{item.nombre}" itemValue="#{item.id}"/>
                     </h:selectOneMenu>
-                    <h:commandButton action="EmpleadoConfirmar" value="Aceptar" actionListener="#{empleadoBean.actualizarPuesto}"/> 
-                    <h:commandButton action="EmpleadoLista" value="Cancelar" immediate="true"/>
+                    <h:commandButton action="EmpleadoConfirmarV2" value="Aceptar" actionListener="#{empleadoBean.actualizarPuesto}"/> 
+                    <h:commandButton action="EmpleadoListaV2" value="Cancelar" immediate="true"/>
                 </h:panelGrid>
             </h:form>
         </f:view>
 
-    </h:body>
-</html>
+            </ui:define>
 
+        </ui:composition>
+
+    </body>
+</html>
