--- a/ProyectoBibliotecaDSW2-war/web/LibroCrearEditarV2.xhtml
+++ b/ProyectoBibliotecaDSW2-war/web/LibroCrearEditarV2.xhtml
@@ -1,13 +1,16 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        <f:view>
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
+
+    <body>
+
+        <ui:composition template="./TemplatePrincipal.xhtml">
+
+            <ui:define name="content">
+                 <f:view>
 
 
             <h:form>
@@ -24,12 +27,14 @@
                     <h:inputText id="numPaginas" value="#{libroBean.libro.numPaginas}" title="NumPaginas" />
                     <h:outputLabel value="Abstract1:" for="abstract1" />
                     <h:inputTextarea rows="4" cols="30" id="abstract1" value="#{libroBean.libro.abstract1}" title="Abstract1" />
-                    <h:commandButton action="LibroConfirmar" value="Aceptar"/> 
-                    <h:commandButton action="LibroLista" value="Cancelar" immediate="true"/>
+                    <h:commandButton action="LibroConfirmarV2" value="Aceptar"/> 
+                    <h:commandButton action="LibroListaV2" value="Cancelar" immediate="true"/>
                 </h:panelGrid>
             </h:form>
         </f:view>
+            </ui:define>
 
-    </h:body>
+        </ui:composition>
+
+    </body>
 </html>
-
