--- a/ProyectoBibliotecaDSW2-war/web/PuestoListaV2.xhtml
+++ b/ProyectoBibliotecaDSW2-war/web/PuestoListaV2.xhtml
@@ -1,21 +1,25 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        <h1>Lista de Categoria</h1>
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
+
+    <body>
+
+        <ui:composition template="./TemplatePrincipal.xhtml">
+
+            <ui:define name="content">
+                 <h1>Lista de Puestos</h1> 
+        <br/>
         <f:view>
 
 
             <h:form>
-                <h:commandButton action="CategoriaCrearEditar" value="Nuevo" actionListener="#{categoriaBean.limpiarNuevo}"/>
-                  <h:commandButton action="MenuPrincipalV2" value="Regresar"/>
+                <h:commandButton action="PuestoCrearEditarV2" value="Nuevo" actionListener="#{puestoBean.limpiarNuevo}"/>
+                <h:commandButton action="MenuPrincipalV2" value="Regresar"/>
                 <h1><h:outputText value="List"/></h1>
-                <h:dataTable value="#{categoriaBean.lista}" var="item">
+                <h:dataTable value="#{puestoBean.lista}" var="item">
                     <h:column>
                         <f:facet name="header">
                             <h:outputText value="Id"/>
@@ -35,19 +39,22 @@
                         <h:outputText value="#{item.descripcion}"/>
                     </h:column>
                     <h:column>
-                        <h:commandButton action="CategoriaCrearEditar" value="Editar" actionListener="#{categoriaBean.prepararEditar}">
-                            <f:setPropertyActionListener target="#{categoriaBean.categoria}" value="#{item}"/>
-                        </h:commandButton>
+                    <h:commandButton action="PuestoCrearEditarV2" value="Editar" actionListener="#{puestoBean.prepararEditar}">
+                        <f:setPropertyActionListener target="#{puestoBean.puesto}" value="#{item}"/>
+                    </h:commandButton>
                     </h:column>
                     <h:column>
-                        <h:commandButton action="CategoriaConfirmar" value="Eliminar" actionListener="#{categoriaBean.prepararEliminar}">
-                            <f:setPropertyActionListener target="#{categoriaBean.categoria}" value="#{item}"/>
+                        <h:commandButton action="PuestoConfirmarV2" value="Eliminar" actionListener="#{puestoBean.prepararEliminar}">
+                            <f:setPropertyActionListener target="#{puestoBean.puesto}" value="#{item}"/>
                         </h:commandButton>
                     </h:column>
                 </h:dataTable>
             </h:form>
         </f:view>
 
-    </h:body>
-</html>
+            </ui:define>
 
+        </ui:composition>
+
+    </body>
+</html>
