--- a/ProyectoBibliotecaDSW2-war/web/UsuarioListaV2.xhtml
+++ b/ProyectoBibliotecaDSW2-war/web/UsuarioListaV2.xhtml
@@ -1,21 +1,25 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        <h1>Lista de Empleado</h1>
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
+
+    <body>
+
+        <ui:composition template="./TemplatePrincipal.xhtml">
+
+            <ui:define name="content">
+                 <h1>Lista de Usuarios</h1>
         <br/>
         <f:view>
 
 
             <h:form>
-                <h:commandButton action="EmpleadoCrearEditar" value="Nuevo" actionListener="#{empleadoBean.limpiarNuevo}"/>
+                <h:commandButton action="UsuarioCrearEditarV2" value="Nuevo" actionListener="#{usuarioBean.limpiarNuevo}"/>
+                <h:commandButton action="MenuPrincipalV2" value="Regresar"/>
                 <h1><h:outputText value="List"/></h1>
-                <h:dataTable value="#{empleadoBean.lista}" var="item">
+                <h:dataTable value="#{usuarioBean.lista}" var="item">
                     <h:column>
                         <f:facet name="header">
                             <h:outputText value="Id"/>
@@ -78,36 +82,33 @@
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="ApellidoMaterno"/>
-                        </f:facet>
-                        <h:outputText value="#{item.apellidoMaterno}"/>
-                    </h:column>
-                    <h:column>
-                        <f:facet name="header">
                             <h:outputText value="Correo"/>
                         </f:facet>
                         <h:outputText value="#{item.correo}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="IdPuesto"/>
+                            <h:outputText value="ApellidoMaterno"/>
                         </f:facet>
-                        <h:outputText value="#{item.idPuesto.nombre}"/>
+                        <h:outputText value="#{item.apellidoMaterno}"/>
                     </h:column>
                     <h:column>
-                        <h:commandButton action="EmpleadoCrearEditar" value="Editar" actionListener="#{empleadoBean.prepararEditar}">
-                            <f:setPropertyActionListener target="#{empleadoBean.empleado}" value="#{item}"/>
+                        <h:commandButton action="UsuarioCrearEditarV2" value="Editar" actionListener="#{usuarioBean.prepararEditar}">
+                            <f:setPropertyActionListener target="#{usuarioBean.usuario}" value="#{item}"/>
                         </h:commandButton>
                     </h:column>
                     <h:column>
-                        <h:commandButton action="EmpleadoConfirmar" value="Eliminar" actionListener="#{empleadoBean.prepararEliminar}">
-                            <f:setPropertyActionListener target="#{empleadoBean.empleado}" value="#{item}"/>
+                        <h:commandButton action="UsuarioConfirmarV2" value="Eliminar" actionListener="#{usuarioBean.prepararEliminar}">
+                            <f:setPropertyActionListener target="#{usuarioBean.usuario}" value="#{item}"/>
                         </h:commandButton>
                     </h:column>
                 </h:dataTable>
             </h:form>
         </f:view>
 
-    </h:body>
-</html>
+            </ui:define>
 
+        </ui:composition>
+
+    </body>
+</html>
