--- a/ProyectoBibliotecaDSW2-war/web/index.xhtml
+++ b/ProyectoBibliotecaDSW2-war/web/index.xhtml
@@ -10,7 +10,7 @@
         <center>Login de Biblioteca 
             <br/>
             <h:form>
-                <h:commandButton action="MenuPrincipal" value="Ingresar"/>
+                <h:commandButton action="MenuPrincipalV2" value="Ingresar"/>
             </h:form>
         </center>
     </h:body>
